# fidl

./: README.md  atlas.cxx  atlas.h  atlas_to_image_space.pro  box_correction.c  center_of_mass2.c  center_of_mass2.h  check_dimensions.cxx  compute_avg_zstat.pro  d2float.h  define_single_dsgn_matrix_new2.pro  dim_param2.h  fidl.h  fidl_anova4.c  fidl_anova4.pro  fidl_bolds.cxx  fidl_logreg_collinear.cxx  fidl_motionreg.c  fidl_region_stats.cxx  fidl_rt2.txt  fidl_zstat2.c  files_struct.h  filetype.c  filetype.h  find_regions_by_file_cover.c  find_regions_by_file_cover.h  get_atlas_coords.pro  get_atlas_labels.pro  get_atlas_param.c  get_dialog_pickfile.pro  get_filetype.pro  get_glms.pro  get_image.pro  get_regions.pro  get_root.pro  get_slk.pro  get_str.pro  header.cxx  header.h  ifh.h  (+37 more)
R/: path
cmake/: CMakeLists.txt
matlab/: barfreqandtcplotsemscat_170425.m  barfreqandtcplotsemscat_180125.m
